--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
             <div class="item_right">
                 <ul>
                     <li><a href="#">Create</a></li>
+                    <li><a href="#">Create</a></li>
+                    <li><a href="#">Create</a></li>
+                    <li><a href="#">Create</a></li>
                 </ul>
             </div>
         </header>   
